# storage/api-docs/api-docs.json
@@ -19,6 +19,90 @@
         }
     ],
     "paths": {
+        "/create": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Create new User",
+                "description": "Returns User data",
+                "operationId": "createUser",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "User authorization",
+                "description": "Returns a token",
+                "operationId": "authUser",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/blog": {
+            "get": {
+                "tags": [
+                    "Blogs"
+                ],
+                "summary": "Get list of blogs",
+                "description": "Returns list of blogs",
+                "operationId": "getBlogs",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/equipments": {
+            "get": {
+                "tags": [
+                    "Equipments"
+                ],
+                "summary": "Get list of equipments",
+                "description": "Returns list of equipments",
+                "operationId": "getEquipments",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/services": {
             "get": {
                 "tags": [
@@ -45,7 +129,7 @@
                 ],
                 "summary": "Create new service",
                 "description": "Returns service data",
-                "operationId": "createServices",
+                "operationId": "storeServices",
                 "requestBody": {
                     "description": "Pass user credentials",
                     "required": true,
@@ -164,11 +248,48 @@
                     }
                 }
             }
+        },
+        "/subservices": {
+            "get": {
+                "tags": [
+                    "Blogs"
+                ],
+                "summary": "Get list of subservices",
+                "description": "Returns list of subservices",
+                "operationId": "getSubservices",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
         }
     },
     "tags": [
         {
+            "name": "Auth",
+            "description": "API Endpoints of Projects"
+        },
+        {
+            "name": "Blogs",
+            "description": "API Endpoints of Projects"
+        },
+        {
+            "name": "Equipments",
+            "description": "API Endpoints of Projects"
+        },
+        {
             "name": "Services",
+            "description": "API Endpoints of Projects"
+        },
+        {
+            "name": "Subservices",
             "description": "API Endpoints of Projects"
         }
     ],
